[package]
name = "cia-administrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.9.0"
# features = ["dynamic"]

[dependencies]
bevy = { version = "0.9.0", features = [] }
iyes_loopless = "0.9.1"
ordered-float = "3.4.0"
# bevy_egui = "0.17"

# Wasm
[profile.release]
opt-level = 'z'
debug = false
panic = "abort"
lto = true


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
